--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .nav-link{
+    @apply mx-2 text-lg text-gray-500 border-b border-black hover:border-gray-500 duration-500 cursor-pointer;
+  }
+  .mobile-nav-link{
+    @apply my-1 text-xl border-white border-b hover:border-black duration-500 cursor-pointer;
+  }
+}
